added gulp task for styles and server, renamed files to avoid multiple index.html, removed vulcanize for now, updated paths where necessary

--- a/index.html
+++ b/index.html
@@ -4,12 +4,17 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1, maximum-scale=1">
     <title>Custom Element Demo</title>
+
+    <!-- Importing Polyfill -->
     <script src="bower_components/platform/platform.js"></script>
-    <link rel="import" href="src/index.html">
+
+    <!-- Importing Custom Elemenent -->
+    <link rel="import" href="src/element.html">
   </head>
   <body>
-    <script>
 
-    </script>
+    <!-- Using Custom Element -->
+    <custom-element></custom-element>
+
   </body>
 </html>
