--- a/src/element.html
+++ b/src/element.html
@@ -3,9 +3,9 @@
 <head>
   <meta charset="UTF-8">
   <title>Brick Component</title>
-  <link rel="stylesheet" href="index.css">
+  <link rel="stylesheet" href="element.css">
 </head>
 <body>
-  <script src="index.js"></script>
+  <script src="element.js"></script>
 </body>
 </html>
