using the yeoman generator to generate the boilerplate

--- a/src/element.html
+++ b/src/element.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Brick Component</title>
+  <title>Brick-Boilerplate</title>
   <link rel="stylesheet" href="element.css">
 </head>
 <body>
