--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1, maximum-scale=1">
-    <title>Custom Element Demo</title>
+    <title>Brick-Boilerplate</title>
 
     <!-- Importing Polyfill -->
     <script src="bower_components/platform/platform.js"></script>
